kube-manifests/04-Ingress-NameBasedVHost-Routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namebasedvhost-routing
  annotations:
    # External Load Balancer ingress service
    kubernetes.io/ingress.class: "gce"  
    # Static IP for Ingress Service
    # from the earlier demo this is set to address: 34.107.135.235
    # gcloud compute addresses describe gke-ingress-extip1 --global
    # all the domain urls should resolve to this ip address and be in the Cloud DNS as A records
    kubernetes.io/ingress.global-static-ip-name: "gke-ingress-extip1"   
    # Google Managed SSL Certificates
    # the three domains are in the managed-certifiate.yaml
    networking.gke.io/managed-certificates: managed-cert-for-ingress
    # SSL Redirect HTTP to HTTPS (frontend config reference)
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"   
    # External DNS - For creating a Record Set in Google Cloud Cloud DNS
    #external-dns.alpha.kubernetes.io/hostname: default-ingress.kalyanreddydaida.com
    external-dns.alpha.kubernetes.io/hostname: default-ingress.cloudnetworktesting.com
    # this is the fqdn that will be added to the Cloud DNS via the external-dns with an A record
    # of the loadbalancer of the ingress service
    # the question is why are the other 2 domains not specified? (see 2 host: below)
    # the reason is that any host: specified in rules: is auto-generated in the external-dns
    # only the non-host url default-ingress.cloudnetworktesitng.com needs to be specified directly in the external-dns annotation
spec:          
  defaultBackend:
  # no host argument here, so the domain for the default needs to be explicity annotated in the external-dns (see above)
    service:
      name: app3-nginx-nodeport-service
      port:
        number: 80     
  rules:
  # in previous iteration this started with http, but here it starts with host.
  # if the hostname in the url matches it will iterate through the paths: definitions below
    #- host: app1-ingress.kalyanreddydaida.com
    - host: app1-ingress.cloudnetworktesting.com
    # the host: is autogenerated by the external-dns in the Cloud DNS. It does not need to be added directly in the annotation above
      http:
        paths:
        # the rest of this is similar to the context path based routing.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
    #- host: app2-ingress.kalyanreddydaida.com
    - host: app2-ingress.cloudnetworktesting.com
      http:
        paths:                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-nodeport-service
                port: 
                  number: 80
